[package]
name = "statedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
clap = { version = "4.2.2", features = ["derive"] }
tokio = { version = "1", features = ["full"]}
warp = "0.3"
